2002-10-07  Dom Lachowicz <doml@appligent.com>

	* rsvg-paint-server.c (rsvg_clone_linear_gradient, rsvg_clone_radial_gradient): new functions for cloning gradient states
	* rsvg.c (rsvg_gradient_stop_handler_new_clone): new function for setting up a gradient stop handler from a cloned gradient
	(rsvg_start_radial_gradient): Handle xlink:href for cloned gradients
	(rsvg_start_linear_gradient): ditto
	(text_handler_characters): Fix segv
	(*): fix misc memleaks. thanks valgrind!
	
2002-10-06  Dom Lachowicz <doml@appligent.com>

	* svg-rc-style.c (): Added const-ness to struct
	* rsvg.c (rsvg_parse_cssbuffer, rsvg_style_handler_*): new functions
	to implement CSS style parsing
	(*): Implement CSS1/CSS2 style handling based on tagname (eg. "text") and on class (eg. "error")
	(*): Implement proper handler nesting, cleanup a few memleaks
	
2002-10-05  Dom Lachowicz <doml@appligent.com>

	* Move test images to tests subdirectory, add more tests
	* rsvg.c (start_image): Handle affines, rotation, scaling, translate. 
	Has bugs that can be taken care of by gdk_pixbuf_copy later
	
2002-10-05  Alexander Larsson  <alexl@redhat.com>

	* gdk-pixbuf-loader/io-svg.c:
	Declare fill_vtable and fill_info to avoid warning.

2002-10-04  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (): fix bugs with gradient style handling, few other bugs left in radial gradient
	
2002-10-04  Dom Lachowicz <doml@appligent.com>

	* test-rsvg.c (main): Implemented version, better help description
	
2002-10-04  Alexander Larsson  <alexl@redhat.com>

	* Makefile.am:
	* configure.in:
	Install test-rsvg as rsvg
	Fix gdk-pixbuf-loader build when you have an old version of gdk-pixbuf.

2002-10-03  Dom Lachowicz <doml@appligent.com>

	* rsvg.c (start_svg): Fix error that was hurting nautilus icon themes

	* test-rsvg.c (main): fix segfaults, add width, height arguments, configurable output format
	
2002-10-03  Matthias Clasen <maclas@gmx.de>
